k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-file-manager
  namespace: default
  labels:
    app: s3-file-manager
spec:
  selector:
    app: s3-file-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
