k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-file-manager
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: s3-file-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3-file-manager
                port:
                  number: 80
